<resources>
    <string name="app_name">LeaseGuard</string>
    <string name="watchout">Watch Out!</string>
    <string name="looksgood">Looks Good!</string>
    <string name="issue_body">RentSafe found 1 potential issue with your lease</string>
    <string name="issues_body">RentSafe found %1$d potential issues with your lease</string>
    <string name="no_issues_body">RentSafe did not find any major issues with your lease</string>
    <string name="lease_details">LEASE DETAILS</string>
    <string name="property_name">Property Name</string>
    <string name="address">Address</string>
    <string name="rent_amount">Rent Amount</string>
    <string name="rental_duration">Rental Duration</string>
    <string name="sign_lease">SIGN LEASE</string>
    <string name="edit_lease_details_manually">Edit lease details manually</string>
    <string name="rent_amount_per_month">$%.2f / month</string>
    <string name="no_document">You don\'t have any documents</string>
    <string name="no_document_desc">Take a photo or import a PDF</string>
    <string name="photo">Photo</string>
    <string name="photo_library">Photo Library</string>
    <string name="pdf">PDF</string>
    <string name="google_drive">Google Drive</string>
    <string name="issues_found">issues found</string>
    <string name="issue_found">issue found</string>
    <string name="landlord">Landlord</string>
    <string name="property_info">PROPERTY INFO</string>
    <string name="pets_allowed">Pets Allowed</string>
    <string name="key_deposit">Key Deposit</string>
    <string name="see_ratings_reviews">SEE RATINGS/REVIEWS</string>
    <string name="share_document">Share Document</string>
    <string name="delete_document">Delete Document</string>
    <string name="processing_document">Analyzing Document…</string>
    <string name="not_available">Rent Not Available</string>
    <string name="action_sign_lease">Save</string>
    <string name="analyzing">Analyzing…</string>
    <string name="analyzing_body">We’re automatically checking to see if there are any issues with your lease. This may take a few minutes.</string>
    <string name="analyzing_question">In the meantime, could you help us by answering a few questions about your preferences as a tenant?</string>
    <string name="sure_i_don_t_mind">SURE! I DON\'T MIND</string>
    <string name="no_thanks">No thanks. Maybe next time.</string>
    <string name="survey_question1">Are you okay with a landlord preventing guests to stay overnight?</string>
    <string name="survey_question2">Are you okay with a landlord preventing pets in the building?</string>
    <string name="survey_question3">Are you okay with a landlord requiring a security or damage deposit?</string>
    <string name="survey_question4">Are you okay with a landlord requiring both a first and last month rent deposit?</string>
    <string name="yes_i_don_t_mind">YES - I DON\'T MIND</string>
    <string name="no_that_s_not_okay">NO - THAT\'S NOT OKAY</string>
    <string name="thank_you">Thank You!</string>
    <string name="survey_end_body1">Answering these questions allows us to work with landlords to create better policies for tenants.</string>
    <string name="survey_end_body2">Your document results should be ready to view soon. If not, check back in a few minutes!</string>
    <string name="go_back_home">GO BACK HOME</string>
</resources>
