<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_empty_questions"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bodyText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/generic_margin_24dp"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/bodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_question1"
        style="@style/BaseText.Text16"
        app:layout_constraintTop_toBottomOf="@id/headerImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/accept_button"
        android:layout_marginTop="@dimen/generic_margin_24dp"
        android:paddingStart="@dimen/generic_margin_16dp"
        android:paddingEnd="@dimen/generic_margin_16dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bodyText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reject_button"
        android:layout_marginTop="32dp"
        android:paddingStart="@dimen/generic_margin_24dp"
        android:paddingEnd="@dimen/generic_margin_24dp"
        android:backgroundTint="@color/successgreen"
        android:text="@string/yes_i_don_t_mind" />

    <Button
        android:id="@+id/reject_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/accept_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="@dimen/generic_margin_24dp"
        android:paddingEnd="@dimen/generic_margin_24dp"
        android:backgroundTint="@color/watchoutred"
        android:text="@string/no_that_s_not_okay" />

</androidx.constraintlayout.widget.ConstraintLayout>